Bug 391068 - account totals in home view have lost their decimal places
Summary: account totals in home view have lost their decimal places
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-25 21:22 UTC by Dave Nelson
Modified: 2018-02-26 20:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dave Nelson 2018-02-25 21:22:32 UTC
this is a regression between commits 09ffa40a and cff06889

Total Assets, Total Liabilities, Net Worth still show decimal places,
but individual account totals are now rounded

could this have happened when the currency symbol was repositioned ?
Comment 1 Thomas Baumgart 2018-02-26 20:54:57 UTC
Git commit 939bc9b1d59a5e44d4c00699b2e00af3379383c6 by Thomas Baumgart.
Committed on 26/02/2018 at 20:54.
Pushed by tbaumgart into branch 'master'.

Make sure account object has correct fraction information

Retrieving a list of all accounts could leave the account objects
returned without fraction information. This change makes sure that all
accounts have a correct value for the fraction (which is based on
account type and currency)

M  +3    -4    kmymoney/mymoney/storage/mymoneystoragemgr.cpp

https://commits.kde.org/kmymoney/939bc9b1d59a5e44d4c00699b2e00af3379383c6