Make sure account object has correct fraction information

Retrieving a list of all accounts could leave the account objects
returned without fraction information. This change makes sure that all
accounts have a correct value for the fraction (which is based on
account type and currency)

BUG: 391068